--- a/CoreBeginners/appsettings.json
+++ b/CoreBeginners/appsettings.json
@@ -9,6 +9,6 @@
 
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EmployeeConnection": "Data Source=DESKTOP-9BVOOP4\\SQL_GADGET;Initial Catalog=CoreBeginnersDB;Integrated Security=True"
+   // "EmployeeConnection": "Data Source=DESKTOP-9BVOOP4\\SQL_GADGET;Initial Catalog=CoreBeginnersDB;Integrated Security=True"
   }
 }
